[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-secret-mask"
version = "0.1.0"
description = "Automatically detect and mask secrets in strings and dicts."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["secret", "mask", "redact", "security", "logging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-secret-mask#readme"
Repository = "https://github.com/philiprehberger/py-secret-mask"
Issues = "https://github.com/philiprehberger/py-secret-mask/issues"
Changelog = "https://github.com/philiprehberger/py-secret-mask/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_secret_mask"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
